--- a/src/app/sistema/config/nova-msg/nova-msg.component.html
+++ b/src/app/sistema/config/nova-msg/nova-msg.component.html
@@ -53,8 +53,8 @@
                   <input
                     class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                     type="text"
-                    placeholder="Nome"
-                    formControlName="nome"
+                    placeholder="titulo"
+                    formControlName="titulo"
                   />
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                     >Titulo</label
