--- a/src/app/sistema/config/cadastro-de-categoria/destinacao-da-venda-lista/destinacao-da-venda-lista.component.html
+++ b/src/app/sistema/config/cadastro-de-categoria/destinacao-da-venda-lista/destinacao-da-venda-lista.component.html
@@ -18,9 +18,9 @@
             </div>
 
             <!-- Adicionar, Pesquisar e Filtro -->
-            <div class="row m-0 mt-4 justify-content-center">
+            <div class="row mt-4 m-0 p-0">
                 <!-- Botão Adicionar -->
-                <div class="col-4 px-2 p-0 m-0">
+                <div class="col-3 px-2 p-0 m-0">
                     <a class="rounded-15 py-1 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm" routerLink="/sistema/configuracoes/cadastro-de-categorias/destinacao-de-venda/cadastrar">
                         <h5 class="fw-normal my-auto text-truncate text-custom-dark">
                             Adicionar
@@ -30,29 +30,27 @@
                 </div>
 
                 <!-- Pesquisar -->
-                <div class="col-4 px-2 p-0 m-0 position-relative">
+                <div class="col-3 px-2 p-0 m-0 position-relative">
                     <input [(ngModel)]="search" (input)="pesquisaDestinacao()" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar" />
                     <i class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"></i>
                 </div>
-                <div class="row m-0 mt-4 justify-content-center">
-                    <!-- Ativos -->
-                    <div class="col-4 px-2 p-0 m-0">
-                        <div class="rounded-15 py-2 px-4 bg-white h-100 d-flex shadow-sm">
-                            <i class="bi-circle-fill my-auto p-0 m-0 me-2 fw-bold text-success" (click)="getDestinacoesF(true)"></i>
-                            <h5 class="fw-normal my-auto text-truncate text-custom-dark">
-                                {{ data.status }}ativos
-                            </h5>
-                        </div>
+                <!-- Ativos -->
+                <div class="col-3 px-2 p-0 m-0">
+                    <div class="rounded-15 py-2 px-4 bg-white h-100 d-flex shadow-sm">
+                        <i class="bi-circle-fill my-auto p-0 m-0 me-2 fw-bold text-success" (click)="getDestinacoesF(true)"></i>
+                        <h5 class="fw-normal my-auto text-truncate text-custom-dark">
+                            {{ data.status }}ativos
+                        </h5>
                     </div>
+                </div>
 
-                    <!-- Inativos -->
-                    <div class="col-4 px-2 p-0 m-0">
-                        <div class="rounded-15 py-2 px-4 bg-white h-100 d-flex shadow-sm">
-                            <i class="bi-circle-fill my-auto p-0 m-0 me-2 fw-bold text-danger" (click)="getDestinacoesF(false)"></i>
-                            <h5 class="fw-normal my-auto text-truncate text-custom-dark">
-                                {{ data.enabled }}inativos
-                            </h5>
-                        </div>
+                <!-- Inativos -->
+                <div class="col-3 px-2 p-0 m-0">
+                    <div class="rounded-15 py-2 px-4 bg-white h-100 d-flex shadow-sm">
+                        <i class="bi-circle-fill my-auto p-0 m-0 me-2 fw-bold text-danger" (click)="getDestinacoesF(false)"></i>
+                        <h5 class="fw-normal my-auto text-truncate text-custom-dark">
+                            {{ data.enabled }}inativos
+                        </h5>
                     </div>
                 </div>
             </div>
