--- a/src/app/sistema/home/home.component.html
+++ b/src/app/sistema/home/home.component.html
@@ -17,7 +17,7 @@
 
             <!-- banner -->
             <div class="row m-0 my-5 justify-content-center align-items-center rounded-25">
-                <img src="./assets/banner.png" alt="" class="banner" />
+                <img [src]="banner" alt="" class="banner" />
             </div>
 
             <div class="row mb-5">
