--- a/src/app/views/navbar/navbar.component.html
+++ b/src/app/views/navbar/navbar.component.html
@@ -59,7 +59,7 @@
           style="height: 40px; width: 40px;
           background-image: url('{{avatarImg}}');background-position: center; background-size: cover;"
         ></div> -->
-                <img class="rounded-circle ms-3 border border-primary" height="40" [src]="fotoPerfil" alt="Perfil" />
+                <img class="rounded-circle ms-3 border border-primary user-image" [src]="fotoPerfil" alt="Perfil" />
             </div>
         </div>
     </div>
