alterações financeiro contas a pagar // receber

--- a/src/app/sistema/compras/pedidos-compras/criar-pedido-compras/criar-pedido-compras.component.html
+++ b/src/app/sistema/compras/pedidos-compras/criar-pedido-compras/criar-pedido-compras.component.html
@@ -395,6 +395,7 @@
             <button
               type="reset"
               class="h-limited btn rounded-15 py-1 px-4 btn-outline-secondary d-flex justify-content-between shadow-sm"
+              (click)="cancelar()"
             >
               <h5 class="fw-normal my-auto text-truncate">Cancelar</h5>
               <i class="bi-x my-auto fs-2 p-0 m-0 fw-bold"></i>
