--- a/src/app/sistema/financeiro/contas-a-pagar/edit-contas-p/edit-contas-p.component.html
+++ b/src/app/sistema/financeiro/contas-a-pagar/edit-contas-p/edit-contas-p.component.html
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div class="modal fade" id="editarPagamentos" tabindex="-1" aria-labelledby="adicionarPagamentosLabel" aria-hidden="true">
+<div class="modal fade" id="editarRecebimentos" tabindex="-1" aria-labelledby="adicionarPagamentosLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
         <form [formGroup]="editPagamentoForm">
             <!-- Modal content -->
@@ -81,7 +81,7 @@
 
                         <!-- Unidade -->
                         <div class="col-2 px-2 pt-4 p-0 m-0 form-floating">
-                            <select required class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm" formControlName="unidades\rwsr">
+                            <select required class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm" formControlName="unidade">
               <option value="matriz">Matriz</option>
               <option value="loja2">Loja 2</option>
             </select>
