--- a/src/app/sistema/financeiro/contas-a-receber/edit-recebimento/edit-recebimento.component.html
+++ b/src/app/sistema/financeiro/contas-a-receber/edit-recebimento/edit-recebimento.component.html
@@ -1,11 +1,16 @@
+<!-- Botão para abrir o modal
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#adicionarRecebimento">
+  Launch demo modal
+</button> -->
+
 <!-- Modal -->
-<div class="modal fade" id="viewPagamentos" tabindex="-1" aria-labelledby="adicionarPagamentosLabel" aria-hidden="true">
+<div class="modal fade" id="adicionarRecebimento" tabindex="-1" aria-labelledby="adicionarRecebimentoLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
-        <form [formGroup]="viewPagamentoForm">
+        <form [formGroup]="editRecebimentoForm">
             <!-- Modal content -->
             <div class="modal-content rounded-15 bg-custom-light">
                 <div class="modal-header px-4">
-                    <h5 class="modal-title text-custom-dark" id="adicionarPagamentosLabel">Adicionar pagamento</h5>
+                    <h5 class="modal-title text-custom-dark" id="adicionarRecebimentoLabel">Adicionar Recebimento</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body px-4">
@@ -16,21 +21,21 @@
                             <h5 class="fw-bold text-custom-dark m-0 p-0">Lançamento financeiro</h5>
                         </div>
 
-                        <!-- Descrição do pagamento -->
+                        <!-- Descrição do recebimento -->
                         <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-                            <input required class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Descrição do pagamento" formControlName="descricao">
-                            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Descrição do pagamento</label>
+                            <input required class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Descrição do recebimento" formControlName="descricao">
+                            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Descrição do recebimento</label>
                         </div>
 
-                        <!-- Forma de pagamento -->
+                        <!-- Forma de recebimento -->
                         <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
                             <select required class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm" formControlName="formaPagamento">
-            <option selected disabled>Selecione uma forma</option>
-            <option value="vista">À Vista</option>
-            <option value="parcelado">Parcelado</option>
-            <option value="outro">Outro</option>
-          </select>
-                            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Forma de pagamento</label>
+              <option selected disabled>Selecione uma forma</option>
+              <option value="vista">À Vista</option>
+              <option value="parcelado">Parcelado</option>
+              <option value="outro">Outro</option>
+            </select>
+                            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Forma de recebimento</label>
                         </div>
 
                         <!-- Plano de contas -->
@@ -72,24 +77,24 @@
                         <!-- Situação -->
                         <div class="col-2 px-2 pt-4 p-0 m-0 form-floating">
                             <select required class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm" formControlName="situacao">
-            <option selected disabled>Selecione</option>
-            <option value="aberto">Em aberto</option>
-            <option value="concluida">Concluída</option>
-          </select>
+              <option selected disabled>Selecione</option>
+              <option value="aberto">Em aberto</option>
+              <option value="concluida">Concluída</option>
+            </select>
                             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Situação</label>
                         </div>
 
                         <!-- Unidade -->
                         <div class="col-2 px-2 pt-4 p-0 m-0 form-floating">
                             <select required class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm" formControlName="unidade">
-            <option value="matriz">Matriz</option>
-            <option value="loja2">Loja 2</option>
-          </select>
+              <option value="matriz">Matriz</option>
+              <option value="loja2">Loja 2</option>
+            </select>
                             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Unidade</label>
                         </div>
 
                         <div class="col-12 text-end px-2 pt-4 p-0 m-0">
-                            <h5 class="fw-bold text-custom-dark">Valor total: {{ viewPagamentoForm.value.valorTotal | currency:'BRL'}}</h5>
+                            <h5 class="fw-bold text-custom-dark">Valor total: {{ editRecebimentoForm.value.valorTotal | currency:'BRL'}}</h5>
                         </div>
                     </div>
 
@@ -99,26 +104,26 @@
                             <h5 class="fw-bold text-custom-dark m-0 p-0">Outras informações</h5>
                         </div>
 
-                        <!-- Fornecedor -->
+                        <!-- Cliente -->
                         <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-                            <select class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm">
-            <option selected disabled>Selecione um fornecedor</option>
-            <option value="fornecedor1">fornecedor1</option>
-            <option value="fornecedor2">fornecedor2</option>
-            <option value="fornecedor3">fornecedor3</option>
-          </select>
-                            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Fornecedor</label>
+                            <select class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm" formControlName="cliente">
+              <option selected disabled>Selecione um Cliente</option>
+              <option value="cliente1">Cliente1</option>
+              <option value="cliente2">Cliente2</option>
+              <option value="cliente3">Cliente3</option>
+            </select>
+                            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Cliente</label>
                         </div>
 
                         <!-- Centro de custo -->
                         <div class="col-2 px-2 pt-4 p-0 m-0 form-floating">
-                            <input class="form-control h-limited-sm px-2 py-3 rounded-15 shadow-sm" type="text">
+                            <input class="form-control h-limited-sm px-2 py-3 rounded-15 shadow-sm" type="text" formControlName="centroCusto">
                             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Centro de custo</label>
                         </div>
 
                         <!-- Data -->
                         <div class="col-2 px-2 pt-4 p-0 m-0 form-floating">
-                            <input class="form-control h-limited-sm px-2 py-3 rounded-15 shadow-sm" type="date">
+                            <input class="form-control h-limited-sm px-2 py-3 rounded-15 shadow-sm" type="date" formControlName="data">
                             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data</label>
                         </div>
 
@@ -129,7 +134,7 @@
 
                         <!-- Observações -->
                         <div class="col-12 px-2 pt-4 p-0 m-0 form-floating">
-                            <textarea class="form-control form-control-lg px-4 py-3 rounded-15 shadow-sm" placeholder="Observações" style="height: 150px"></textarea>
+                            <textarea class="form-control form-control-lg px-4 py-3 rounded-15 shadow-sm" placeholder="Observações" style="height: 150px" formControlName="obs"></textarea>
                             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Observações</label>
                         </div>
 
@@ -142,11 +147,16 @@
                     <!-- Cancelar -->
                     <div class="col-3 px-2 p-0 m-0 d-grid">
                         <button data-bs-dismiss="modal" type="reset" class="h-limited-sm btn rounded-15 py-1 px-4 bg-light shadow-sm text-start">
-          <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Cancelar</h5>
-        </button>
+            <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Cancelar</h5>
+          </button>
                     </div>
 
-
+                    <!-- Salvar -->
+                    <div class="col-3 px-2 p-0 m-0 d-grid">
+                        <button type="submit" class="h-limited-sm btn rounded-15 py-1 px-4 bg-custom-success shadow-sm text-start">
+            <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Salvar</h5>
+          </button>
+                    </div>
 
                 </div>
                 <!-- /Modal footer -->
