--- a/src/app/sistema/config/nova-msg/nova-msg.component.html
+++ b/src/app/sistema/config/nova-msg/nova-msg.component.html
@@ -1,47 +1,40 @@
 <!-- Modal -->
 <div class="modal fade" id="novaMensagem" tabindex="-1" aria-labelledby="novaMensagemLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl">
-        <form [formGroup]="novaMsg">
-            <!-- Modal content -->
-            <div class="modal-content rounded-15 bg-custom-light">
-                <div class="modal-header px-4">
-                    <h5 class="modal-title text-custom-dark" id="novaMsgLabel">
-                        Nova Mensagem
-                    </h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body px-4">
-                    <div class="row p-0 m-0 border-bottom pb-4">
-                        <!-- Usuarios -->
-                        <div class="col-9 px-2 pt-4 p-0 m-0 form-floating">
-                            <select *ngIf="paraTodos" class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm" aria-label="Default select example" disabled>
+  <div class="modal-dialog modal-xl">
+    <form [formGroup]="novaMsg">
+      <!-- Modal content -->
+      <div class="modal-content rounded-15 bg-custom-light">
+        <div class="modal-header px-4">
+          <h5 class="modal-title text-custom-dark" id="novaMsgLabel">
+            Nova Mensagem
+          </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body px-4">
+          <div class="row p-0 border-bottom pb-4">
+            <!-- Usuarios -->
+            <div class="col-9 px-2 pt-4 p-0 m-0 form-floating" style="margin-left: 10px !important;">
+              <select *ngIf="paraTodos" class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm"
+                aria-label="Default select example" disabled>
                 <option selected>Será enviado para todos</option>
               </select>
-                            <select *ngIf="!paraTodos" class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm">
+              <select *ngIf="!paraTodos" class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm">
                 <option selected disabled>Selecione um Usuario</option>
                 <option *ngFor="let usuario of usuarios" [value]="usuario.name">
                   {{ usuario.name }}
                 </option>
               </select>
 
-                            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Usuarios</label
-              >
+              <label class="ms-2 mt-3 small text-truncate text-custom-dark">Usuarios</label>
             </div>
 
             <!-- Botão Enviar Para Todos -->
             <div class="col -6 px-2 pt-4 p-0 m-0">
-              <div class="col-2 px-2 mt-6 flex align-items-center p-0 m-0">
+              <div class="col-2 px-2 mt-6 flex align-items-center p-0">
                 <div class="form-check form-switch flex align-items-center">
-                  <input
-                    ngDefaultControl
-                    [(ngModel)]="paraTodos"
-                    [ngModelOptions]="{ standalone: true }"
-                    class="form-check-input pt-4 ps-5 border bg-custom-light shadow-sm"
-                    type="checkbox"
-                  />
-                  <label class="form-check-label px-2" for="status"
-                    >Enviar para Todos</label
-                  >
+                  <input ngDefaultControl [(ngModel)]="paraTodos" [ngModelOptions]="{ standalone: true }"
+                    class="form-check-input pt-4 ps-5 border bg-custom-light shadow-sm" type="checkbox" />
+                  <label class="form-check-label px-2" for="status">Enviar para Todos</label>
                 </div>
               </div>
             </div>
@@ -50,30 +43,18 @@
               <div class="row m-0 p-0">
                 <!-- Nome -->
                 <div class="col-12 px-2 pt-4 p-0 m-0 form-floating">
-                  <input
-                    class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
-                    type="text"
-                    placeholder="Nome"
-                    formControlName="nome"
-                  />
-                  <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                    >Titulo</label
-                  >
+                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Nome"
+                    formControlName="nome" />
+                  <label class="ms-2 mt-3 small text-truncate text-custom-dark">Titulo</label>
                 </div>
               </div>
             </div>
 
             <!-- Mensagem -->
-            <div class="col-12 px-2 pt-4 p-0 m-0 form-floating">
-              <textarea
-                class="form-control form-control-lg px-4 py-3 rounded-15 shadow-sm"
-                placeholder="Descrição"
-                style="height: 150px"
-                formControlName="texto"
-              ></textarea>
-              <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >Mensagem</label
-              >
+            <div class="col-12 px-2 pt-4  form-floating" style="margin-left: 7px !important; padding-right: 22px !important;">
+              <textarea class="form-control form-control-lg px-4 py-3 rounded-15 shadow-sm" placeholder="Descrição"
+                style="height: 150px" formControlName="texto"></textarea>
+              <label class="ms-2 mt-3 small text-truncate text-custom-dark">Mensagem</label>
             </div>
           </div>
 
@@ -81,14 +62,9 @@
           <div class="row m-0 py-3 modal-footer">
             <!-- Cancelar -->
             <div class="col-3 px-2 p-0 m-0 d-grid">
-              <button
-                data-bs-dismiss="modal"
-                type="reset"
-                class="h-limited-sm btn rounded-15 py-1 px-4 bg-light shadow-sm text-start"
-              >
-                <h5
-                  class="fw-normal my-auto text-truncate text-custom-dark text-center"
-                >
+              <button data-bs-dismiss="modal" type="reset"
+                class="h-limited-sm btn rounded-15 py-1 px-4 bg-light shadow-sm text-start">
+                <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">
                   Cancelar
                 </h5>
               </button>
@@ -96,14 +72,9 @@
 
             <!-- Salvar -->
             <div class="col-3 px-2 p-0 m-0 d-grid">
-              <button
-                type="submit"
-                class="h-limited-sm btn rounded-15 py-1 px-4 bg-custom-success shadow-sm text-start"
-                (click)="submit()"
-              >
-                <h5
-                  class="fw-normal my-auto text-truncate text-custom-dark text-center"
-                >
+              <button type="submit" class="h-limited-sm btn rounded-15 py-1 px-4 bg-custom-success shadow-sm text-start"
+                (click)="submit()">
+                <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">
                   Enviar
                 </h5>
               </button>
